--- a/Web Proje/index.html
+++ b/Web Proje/index.html
@@ -19,6 +19,7 @@
                 <li> <a href="#About"> Şehrim </a></li>
                 <li> <a href="#Contact"> Mirasımız </a></li>
                 <li> <a href="#Contact"> İlgi Alanlarım </a></li>
+                <li> <a href="#"> İletişim </a></li>
             </ul>
         </nav>
 
