--- a/Web Proje/iletisim.html
+++ b/Web Proje/iletisim.html
@@ -1,11 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <title>İletişim</title>
+  <link href="css/iletisim.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  
 </head>
+
 <body>
-    
-</body>
-</html>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid" id="nav">
+      <a class="navbar-brand mb-0 h1" href="index.html">Ana Sayfa</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" href="ozgecmis.html">Özgeçmiş</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="ilgi.html">İlgi Alanlarım</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="sehrim.html">Şehrim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="mirasimiz.html">Mirasımız</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="iletisim.html">İletişim</a>
+          </li>
+        </ul>
+        <li class="nav-item" style="list-style: none;">
+          <a class="nav-link active" href="login.html">Giriş</a>
+        </li>
+      </div>
+    </div>
+  </nav>
+
+  <div align="center" id="center" style="height: 90vh;">
+    <div class="card text-white bg-dark mb-3" >
+      <form name="iletisimform" action="iletisim.php" method="POST" onsubmit="return control();"><br>
+        <div class="row">
+          <div class="col">
+            <label for="isim" class="form-label">İsim</label>
+            <input class="form-control" type="text" id="isim" name="isim">
+          </div>
+          <div class="col">
+            <label for="soyisim" class="form-label">Soyisim</label>
+            <input class="form-control" type="text" id="soyisim" name="soyisim">
+          </div>
+        </div>
+        <div class="row" >
+          <div class="col">
+            <label for="email" class="form-label">E-mail</label>
+            <input class="form-control" type="text" id="email" name="email" placeholder="isim@example.com">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <br>
+            <label for="inputState" class="form-label">Konu</label>
+            <select id="inputState" class="form-select" name="konu">
+              <option selected>Yazılım</option>
+              <option>Tasarım</option>
+              <option>Satın Alma</option>
+
+            </select>
+          </div>
+        </div>
+        <div class="row" >
+          <div class="col">
+            <label for="floatingTextarea2">Mesajınız</label>
+            <div class="form-floating" style="margin-top:2%;">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" name="mesaj"></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <input class="btn btn-outline-warning" type="reset" value="Sıfırla">
+            <input class="btn btn-outline-success" type="submit" value="Gönder">
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="container" style="text-align: center;">Hasan Koç &copy; 2024</div>
+  </div>
