--- a/Web Proje/sehrim.html
+++ b/Web Proje/sehrim.html
@@ -1,11 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sehrim</title>
+    <meta charset="utf-8">
+    <title>Şehrim</title>
+    <link href="css/sehrim.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
 </head>
+
 <body>
-    
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid" id="nav">
+            <a class="navbar-brand mb-0 h1" href="index.html">Ana Sayfa</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="ozgecmis.html">Özgeçmiş</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="ilgi.html">İlgi Alanlarım</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="sehrim.html">Şehrim</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="mirasimiz.html">Mirasımız</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="iletisim.html">İletişim</a>
+                    </li>
+                </ul>
+                <li class="nav-item" style="list-style: none;">
+                    <a class="nav-link active" href="login.html">Giriş</a>
+                </li>
+            </div>
+        </div>
+    </nav>
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <a href="#giris" onclick="change('img/Ckalemerkez.png')" ;><img src="img/Ckalemerkez.png" class="d-block w-100"
+                        alt="antalya"></a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h1>ÇANAKKALE</h1>
+                    <p>Ayrıntılı bilgi için tıklayınız</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <a href="#side" onclick="change('img/abide.png')" ;><img src="img/abide.png" class="d-block w-100"
+                        alt="side antik kenti"></a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>ABİDE</h3>
+                    <p>Ayrıntılı bilgi için tıklayınız</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <a href="#konyaalti" onclick="change('img/truva_ati.jpg')" ;><img src="img/truva_ati.jpg"
+                        class="d-block w-100" alt="konyaaltı plajı"></a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>TRUVA ATI</h3>
+                    <p>Ayrıntılı bilgi için tıklayınız</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <a href="#duden" onclick="change('img/ckalebogaz.jpg')" ;><img src="img/ckalebogaz.jpg" class="d-block w-100"
+                        alt="düden şelalesi"></a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Çanakkale Boğazı</h3>
+                    <p>Ayrıntılı bilgi için tıklayınız</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <a href="#kultur" onclick="change('img/kilitbahir.jpg')" ;><img src="img/kilitbahir.jpg"
+                        class="d-block w-100" alt="altın portakal"></a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>ÇANAKKALE TARİHİ</h3>
+                    <p>Ayrıntılı bilgi için tıklayınız</p>
+                </div>
+            </div>
+
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div align="center">
+        <main id="main" style="width: 100px;float:right;margin-right: 5%;"></main>
+        <div class="container" style="margin-top:5%;margin-bottom: 10%;width: 70%;">
+            <div class="card" id="giris">
+                <div class="card-body">
+
+                    <p class="card-text"> Çanakkale, Türkiye'nin kuzeybatısında, Marmara Bölgesi'nde yer alan tarihi ve kültürel zenginlikleriyle ünlü bir şehirdir. 
+                        Ege Denizi ile Marmara Denizi'ni birbirine bağlayan Çanakkale Boğazı'na ev sahipliği yapan bu şehir, özellikle I. Dünya Savaşı'ndaki Çanakkale Savaşı'nın gerçekleştiği yer olarak büyük bir öneme sahiptir. Gelibolu Yarımadası'ndaki anıtlar ve şehitlikler, her yıl binlerce ziyaretçiyi kendine çeker. 
+                        Aynı zamanda antik Truva kenti de Çanakkale sınırları içinde yer almakta olup, 
+                        mitolojik hikayeler ve arkeolojik kazılarla ilgilenenler için eşsiz bir destinasyondur. 
+                        Doğal güzellikleri, tarihi dokusu ve kültürel etkinlikleri ile Çanakkale, hem yerli hem de yabancı turistler için cazip bir rotadır.
+
+                </div>
+            </div>
+
+
+            <div class="card" id="abide">
+                <img src="img/abide.png" class="card-img-top" alt="Canakkale abidesi" style="height: 370px;">
+                <div class="card-body">
+                    <h5 class="card-title">Çanakkale Abidesi</h5>
+                    <p class="card-text"> Çanakkale Abidesi, 
+                        Türkiye'nin Çanakkale ilindeki Gelibolu Yarımadası'nda, Morto Koyu yakınlarında yer alan ve I. Dünya Savaşı sırasında Çanakkale Savaşı'nda hayatını kaybeden Türk askerlerinin anısına inşa edilmiş anıtsal bir yapıdır. 41,7 metre yüksekliğindeki bu anıt, 1960 yılında tamamlanmış olup, dört büyük sütunun taşıdığı devasa bir yapıdan oluşur. Abide, savaştaki kahramanlıkları ve fedakarlıkları simgelerken, aynı zamanda barış ve dostluk mesajı da vermektedir. 
+                        Ziyaretçiler, burada yer alan müze ve şehitlikleri gezerek tarihî bir yolculuğa çıkabilir ve savaşın izlerini yakından görebilirler. 
+                        Çanakkale Abidesi, her yıl düzenlenen anma törenleriyle de milli birlik ve beraberlik duygusunu pekiştiren önemli bir sembol olarak öne çıkmaktadır.</p>
+                </div>
+            </div>
+            <div class="card" id="truvaati">
+                <img src="img/truva_ati.jpg" class="card-img-top" alt="truva ati" style="height: 320px;">
+                <div class="card-body">
+                    <h5 class="card-title">Truva Atı</h5>
+                    <p class="card-text">Çanakkale'deki eski kordonda yer alan Truva Atı, 2004 yapımı "Troy" filminde kullanılan orijinal film seti objesi olarak ünlüdür. 
+                        Brad Pitt'in başrolünde oynadığı bu Hollywood yapımı filmin çekimlerinin ardından Çanakkale'ye hediye edilen at, şehrin simgelerinden biri haline gelmiştir. 
+                        Ahşap malzemeden yapılmış ve oldukça etkileyici bir görünüme sahip olan bu Truva Atı, mitolojik Truva Savaşı'na ve Antik Truva kentine atıfta bulunur. 
+                        Eski kordon boyunca yürüyüş yapan ziyaretçiler, bu ikonik yapıyı görmeden geçmezler. 
+                        Truva Atı, fotoğraf çekmek isteyen turistlerin ve tarih meraklılarının ilgisini çekerken, Çanakkale'nin tarihi ve kültürel mirasını da vurgulayan önemli bir semboldür.
+                    </p>
+                </div>
+            </div>
+            <div class="card" id="bogaz">
+                <img src="img/ckalebogaz.jpg" class="card-img-top" alt="Bogaz">
+                <div class="card-body">
+                    <h5 class="card-title">Çanakkale Boğazı</h5>
+                    <p class="card-text">Çanakkale Boğazı, Türkiye'nin kuzeybatısında, Marmara Denizi ile Ege Denizi'ni birbirine bağlayan stratejik öneme sahip dar bir su geçididir. 
+                        Yaklaşık 68 kilometre uzunluğunda ve en dar yeri 1,2 kilometre genişliğinde olan bu boğaz, tarih boyunca birçok medeniyetin ve askeri harekâtın merkezi olmuştur. 
+                        I. Dünya Savaşı'nda Çanakkale Savaşı'nın yaşandığı bu bölge, Türk tarihinin en destansı savunmalarından birine sahne olmuştur. 
+                        Boğazın her iki yakasında yer alan Çanakkale ve Kilitbahir kaleleri, bu stratejik geçidin kontrolünü sağlamak için inşa edilmiştir. 
+                        Günümüzde Çanakkale Boğazı, sadece tarihi ve askeri önemiyle değil, aynı zamanda doğal güzellikleri ve yoğun deniz trafiği ile de dikkat çekmektedir. Bu su yolu, hem ticari gemiler hem de turistler için önemli bir rotadır ve bölgenin ekonomik ve kültürel yaşamında büyük bir rol oynar. </p>
+                </div>
+            </div>
+            <div class="card card bg-primary text-white" id="tarih">
+                <div class="card-body">
+                    <h5 class="card-title">Çanakkale Tarihi</h5>
+                    <p class="card-text"> Çanakkale, tarih boyunca birçok medeniyete ev sahipliği yapmış ve stratejik konumu nedeniyle her dönem büyük öneme sahip olmuştur. 
+                        Antik çağlarda Truva Savaşı'na sahne olan bu bölge, Homeros'un ünlü destanı "İlyada"da anlatılan efsanevi savaşın geçtiği yer olarak bilinir. 
+                        Bizans, Roma ve Osmanlı İmparatorlukları döneminde de stratejik bir geçit olan Çanakkale, özellikle Osmanlı döneminde önemli bir askeri ve ticari merkez haline gelmiştir. 
+                        I. Dünya Savaşı sırasında, 1915-1916 yıllarında gerçekleşen Çanakkale Savaşı, Türk tarihinin en destansı direnişlerinden birine sahne olmuştur ve Mustafa Kemal Atatürk'ün askeri dehasının parladığı yerlerden biri olmuştur. 
+                        Bu savaş, Türk milletinin bağımsızlık ve özgürlük mücadelesinin sembollerinden biri haline gelmiştir. 
+                        Çanakkale'nin tarihi, zaferlerle, kahramanlıklarla ve zengin kültürel mirasıyla şekillenmiş, bu da onu Türkiye'nin en önemli ve anlamlı şehirlerinden biri yapmıştır.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/duryolcu.jpg" class="card-img-top" alt="Dur yolcu" style="height: 370px;">
+                <div class="card-body">
+                    <h5 class="card-title">"Dur yolcu bilmeden gelip bastığın bu toprak bir devrin battığı yerdir."</h5>
+                    <a href="mirasimiz.html"><button type="button" class="btn btn-danger">Mirasımız</button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">Hasan Koç &copy; 2024</div>
+    </div>
+    <script type="text/javascript" src="js/sehrim.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
+
+
 </body>
+
 </html>
