giris sayfasi guncellemesi

--- a/Web Proje/index.html
+++ b/Web Proje/index.html
@@ -46,6 +46,7 @@
 
 
   <div align="center" id="center" style="margin-top:40vh;">
+    <img src="img/pp.jpg" class="profilp">
     <a href="#hakkimda" style="color:white;text-decoration: none;">
       <h2>Hasan Koç</h2>
       <br>
