--- a/Web Proje/sehrim.html
+++ b/Web Proje/sehrim.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="#side" onclick="change('img/abide.png')" ;><img src="img/abide.png" class="d-block w-100"
+                <a href="#abide" onclick="change('img/abide.png')" ;><img src="img/abide.png" class="d-block w-100"
                         alt="side antik kenti"></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h3>ABİDE</h3>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="#konyaalti" onclick="change('img/truva_ati.jpg')" ;><img src="img/truva_ati.jpg"
+                <a href="#truvaati" onclick="change('img/truva_ati.jpg')" ;><img src="img/truva_ati.jpg"
                         class="d-block w-100" alt="konyaaltı plajı"></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h3>TRUVA ATI</h3>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="#duden" onclick="change('img/ckalebogaz.jpg')" ;><img src="img/ckalebogaz.jpg" class="d-block w-100"
+                <a href="#bogaz" onclick="change('img/ckalebogaz.jpg')" ;><img src="img/ckalebogaz.jpg" class="d-block w-100"
                         alt="düden şelalesi"></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h3>Çanakkale Boğazı</h3>
@@ -92,8 +92,8 @@
             </div>
 
             <div class="carousel-item">
-                <a href="#kultur" onclick="change('img/kilitbahir.jpg')" ;><img src="img/kilitbahir.jpg"
-                        class="d-block w-100" alt="altın portakal"></a>
+                <a href="#tarih" onclick="change('img/kilitbahir.jpg')" ;><img src="img/kilitbahir.jpg"
+                        class="d-block w-100" alt=""></a>
                 <div class="carousel-caption d-none d-md-block">
                     <h3>ÇANAKKALE TARİHİ</h3>
                     <p>Ayrıntılı bilgi için tıklayınız</p>
