--- a/Web Proje/iletisim.html
+++ b/Web Proje/iletisim.html
@@ -10,7 +10,7 @@
   
 </head>
 
-<body>
+<body style="background-color:#212529;"> 
   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid" id="nav">
       <a class="navbar-brand mb-0 h1" href="index.html">Ana Sayfa</a>
@@ -43,7 +43,7 @@
   </nav>
 
   <div align="center" id="center" style="height: 90vh;">
-    <div class="card text-white bg-dark mb-3" >
+    <div class="card text-black bg-light mb-3" >
       <form name="iletisimform" action="iletisim.php" method="POST" onsubmit="return control();"><br>
         <div class="row">
           <div class="col">
